[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/UI.gd" type="Script" id=1]
[ext_resource path="res://fonts/NotoSans-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/Timer.gd" type="Script" id=3]
[ext_resource path="res://Sprites/ui_build.png" type="Texture" id=4]
[ext_resource path="res://Sprites/ui_shoot.png" type="Texture" id=5]

[sub_resource type="Animation" id=1]
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("FadePanel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("FadePanel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 2 )

[node name="UI" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="FadePanel" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FadeIn = SubResource( 1 )
anims/FadeOut = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
autostart = true
script = ExtResource( 3 )

[node name="Label" type="Label" parent="Timer"]
margin_left = 1202.0
margin_top = 2.0
margin_right = 1281.0
margin_bottom = 71.0
custom_fonts/font = SubResource( 3 )
text = "10"

[node name="AbilityShootPlayer1" type="TextureRect" parent="."]
margin_left = 34.0
margin_top = 640.0
margin_right = 97.0
margin_bottom = 703.0
rect_pivot_offset = Vector2( -371, -388 )
texture = ExtResource( 5 )

[node name="AbilityShootPlayer2" type="TextureRect" parent="."]
margin_left = 1102.0
margin_top = 640.0
margin_right = 1165.0
margin_bottom = 703.0
rect_pivot_offset = Vector2( -371, -388 )
texture = ExtResource( 5 )

[node name="AbilityBuildPlayer1" type="TextureRect" parent="."]
margin_left = 105.0
margin_top = 640.0
margin_right = 168.0
margin_bottom = 703.0
rect_pivot_offset = Vector2( -443.464, -388 )
texture = ExtResource( 4 )

[node name="AbilityBuildPlayer2" type="TextureRect" parent="."]
margin_left = 1180.0
margin_top = 639.0
margin_right = 1243.0
margin_bottom = 702.0
rect_pivot_offset = Vector2( -443.464, -388 )
texture = ExtResource( 4 )
